Port library to support jdk8